// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Score renders default 1`] = `
<div
  className="Score-display"
>
  <button
    className="Score-vote"
    disabled={false}
    onClick={[Function]}
  >
    <i
      className="fa fa-arrow-up"
    />
  </button>
  <div
    className="Score-votes"
  >
    1k
  </div>
  <button
    className="Score-vote"
    disabled={false}
    onClick={[Function]}
  >
    <i
      className="fa fa-arrow-down"
    />
  </button>
</div>
`;

exports[`Score voted down 1`] = `
<div
  className="Score-display"
>
  <button
    className="Score-vote"
    disabled={false}
    onClick={[Function]}
  >
    <i
      className="fa fa-arrow-up"
    />
  </button>
  <div
    className="Score-votes Score-down"
  >
    1k
  </div>
  <button
    className="Score-vote Score-down"
    disabled={false}
    onClick={[Function]}
  >
    <i
      className="fa fa-arrow-down"
    />
  </button>
</div>
`;

exports[`Score voted up 1`] = `
<div
  className="Score-display"
>
  <button
    className="Score-vote Score-up"
    disabled={false}
    onClick={[Function]}
  >
    <i
      className="fa fa-arrow-up"
    />
  </button>
  <div
    className="Score-votes Score-up"
  >
    1k
  </div>
  <button
    className="Score-vote"
    disabled={false}
    onClick={[Function]}
  >
    <i
      className="fa fa-arrow-down"
    />
  </button>
</div>
`;

exports[`Score voting 1`] = `
<div
  className="Score-display"
>
  <button
    className="Score-vote Score-disabled"
    disabled={true}
    onClick={[Function]}
  >
    <i
      className="fa fa-arrow-up"
    />
  </button>
  <div
    className="Score-votes Score-disabled"
  >
    1k
  </div>
  <button
    className="Score-vote Score-disabled"
    disabled={true}
    onClick={[Function]}
  >
    <i
      className="fa fa-arrow-down"
    />
  </button>
</div>
`;
